Update implementation to chain events properly.

--- a/project/project-6/index.html
+++ b/project/project-6/index.html
@@ -101,14 +101,18 @@
                 Farm Longitude
                 <br>
                 <input type="text" id="originFarmLongitude" name="originFarmLongitude" value="144.341490"><br>
+                UPC
+                <br>
+                <input type="text" id="harvestUpc" name="harvestUpc" size="50"><br>
+                PRODUCT NOTES
+                <input type="text" id="harvestProductNotes" name="harvestProductNotes" value="Notes"/>
+                <!--
                 <br>
                 SKU
                 <br>
                 <input type="text" id="harvestSku" name="harvestSku" size="50"><br>
-                UPC
-                <br>
-                <input type="text" id="harvestUpc" name="harvestUpc" size="50"><br>
-                <hr/>
+                -->
+                <br><br>
                 <button class="btn-harvest" id="button" type="button" data-id="1">Harvest</button>
             </div>
             <hr/>
