Update labels and remove switch account.

--- a/project/project-6/index.html
+++ b/project/project-6/index.html
@@ -148,7 +148,7 @@
                 <br><br>
                 <table width="100%">
                     <th width="50%" class="item-header"><label>AVAILABLE FOR RECEPTION</label></th>
-                    <th width="50%" class="item-header"><label>RECEIVED</label></th>
+                    <th width="50%" class="item-header"><label>RECEIVED (READY TO BE PURCHASED BY CUSTOMERS)</label></th>
                     <tr>
                         <td class="item-body-retailer">
                             <select id="ftc-shipped-item-list">
@@ -228,10 +228,8 @@
         </div>
         <div class=form-break></div>
         <div class="form-group" id="ftc-switch-account" style="display: none">
-            CHOOSE A DIFFERENT METAMASK ACCOUNT AND PRESS SWITCH ACCOUNT or just refresh the page after making the switch in your metamask wallet.
-            <BR><BR>
-            <!--<button id="button" type="button" data-id="12">SWITCH ACCOUNT</button>-->
-            <button id="button" type="button" onClick='javascript:history.go(0);'>SWITCH ACCOUNT</button>
+            CHOOSE A DIFFERENT METAMASK ACCOUNT AND REFRESH THE PAGE IN THE BROWSER TO GO BACK TO HOME SCREEN.
+            <!--<button id="button" type="button" onClick='javascript:history.go(0);'>SWITCH ACCOUNT</button>-->
         </div>
         <hr>
     </div>
