Update implementation to improve user experience after feedback from reviewer.

--- a/project/project-6/index.html
+++ b/project/project-6/index.html
@@ -11,11 +11,12 @@
 
 <body>
     <div class="container">
-        <h1 style="text-align: center;">Fair Trade Coffee</h1>
+        <h1 style="text-align: center;">Your Virtual Stop to Trade Coffee with Ethereum</h1>
+        <h2 style="text-align: center;">Supply Chain Store powered by Ethereum</h2>
         <hr>
-        <p style="text-align: center;">Prove the authenticity of coffee using the Ethereum blockchain.</p>
+        <p style="text-align: center;">Prove the authenticity of coffee using your Metamask Wallet</p>
     </div>
-
+    <div id="ftc-error"></div>
     <div id="ftc-registration" class="form-group" style="display:none;">
         <h2>METAMASK INFO</h2>
         <div id="metamask-address"></div>
